Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.2, 10.3, 10.2.12, 10.4
-
Component/s: Configuration, Server
-
Labels:
-
Environment:Linux OL7
Description
Server generates errors and eventually crashes due to execeeding limit on number of open file descriptors.
This occurs when additional open_table_caches_instances are created. The calculation for open_files_limit does not account for the fact that there may be multiple instances.
I expect (but have not proven) problem could be avoided adjusting setting in config file to limit number of open_table_caches_instances or increasing open_files_limit. Currently neither of these are set in our config.
Attachments
Issue Links
- mentioned in
-
Page Loading...